# windows-forensics-mcp-server

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/windows_forensics_mcp/: __init__.py  __main__.py  artifacts.py  config.py  errors.py  schemas.py  server.py
src/windows_forensics_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/windows_forensics_mcp/backends/: __init__.py  base.py
src/windows_forensics_mcp/tools/: discovery.py  evtx.py  jumplist.py  lnk.py  mft.py  prefetch.py  registry.py  srum.py  usn.py  windows_dpapi.py
src/windows_forensics_mcp/utils/: deps.py  hashing.py  paths.py  time.py  validation.py
tests/: test_artifacts.py  test_discovery.py  test_evtx_tools.py  test_lnk_jumplist_tools.py  test_parsers_unit.py  test_prefetch_tools.py  test_registry_tools.py  test_srum_mft_usn_tools.py  test_validation.py  test_windows_dpapi_tools.py
