[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-forensics-mcp"
version = "0.1.0"
description = "A local-first MCP server for Windows forensic artifacts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenCode" }
]
dependencies = [
  "mcp>=1.12.4,<2",
  "dissect.esedb",
  "dissect.ntfs",
  "dpapick3>=0.7.1",
  "libesedb-python",
  "libevtx-python",
  "libfsntfs-python",
  "libfwsi-python",
  "liblnk-python",
  "libolecf-python",
  "libregf-python",
  "libscca-python",
  "pypykatz>=0.6.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
windows-forensics-mcp = "windows_forensics_mcp.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
# Test modules bootstrap sys.path before importing the package under test.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]

